[package]
name = "amuse_scene"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amuse_core = { path = "../amuse_core" }
amuse_event = { path = "../amuse_event" }
amuse_events = { path = "../amuse_events" }